@@ -1,6 +1,8 @@
 *** WooCommerce Subscriptions Core Changelog ***
 
 2021-xx-xx - version 1.3.0
+* Fix: Remove references to the Subscription extension in the tooltips found on the Payment Methods settings table. PR#
+* Fix: Update the Automatic Recurring Payments column on the Payment Methods table to only show which payment methods are supported by Subscriptions Core. PR#
 * Tweak: Update deprecation message when calling WC_Subscriptions_Coupon::cart_contains_limited_recurring_coupon() to mention the correct replacement function. PR#53
 
 2021-11-23 - version 1.2.0
